# simplesrp

./: CMakeLists.txt  README.md
include/simplesrp/: bn.h  details.h  routines.h  simplesrp.h
src/: bn.cpp  routines.cpp  srp.cpp
tests/: SRPTests.cpp
